--- a/lib/gits_web/live/my_live/tickets.html.heex
+++ b/lib/gits_web/live/my_live/tickets.html.heex
@@ -24,13 +24,13 @@
     </div>
   </div>
   <div class="grid grow gap-2 lg:grid-cols-2 lg:gap-8">
-    <%= for {ticket_name, tickets} <- ticket_types do %>
+    <%= for {ticket_name, color, tickets} <- ticket_types do %>
       <.link
         :for={{id} <- tickets}
         navigate={~p"/t/#{id}"}
-        class="ring-zinc-400 ring-offset-1 hover:ring-2 rounded-xl border"
+        class="ring-zinc-400 ring-offset-1 hover:ring-2 rounded-xl border p-4"
       >
-        <GitsWeb.EventComponents.ticket_card ticket_name={ticket_name} id={id} />
+        <GitsWeb.EventComponents.ticket_card color={color} name={ticket_name} id={id} />
       </.link>
     <% end %>
   </div>
