--- a/lib/gits_web/live/host_live/edit_event_templates/tickets.html.heex
+++ b/lib/gits_web/live/host_live/edit_event_templates/tickets.html.heex
@@ -63,7 +63,7 @@
         />
         <.input
           type="checkbox"
-          field={tf[:foo]}
+          field={tf[:check_in_enabled]}
           label="Enable Check-in"
           hint="RSVP"
           description="Ticket holders will be required to sign in. This also allows admitting attendees without scanning their ticket"
