--- a/lib/gits_web/components/event_templates/ticket_card.html.heex
+++ b/lib/gits_web/components/event_templates/ticket_card.html.heex
@@ -25,11 +25,10 @@
   <span class="w-1.5 h-10 self-stretch rounded-full" style={"background-color: #{@color}"}></span>
   <div class="grow grid">
     <span class="text-sm/5 font-medium">{@name}</span>
-    <div :if={false} class="flex gap-2 text-sm/4 text-zinc-500">
-      <%= if true do %>
-        <span>Available</span>
-      <% else %>
-        <span>Available</span>
+    <div :if={assigns[:tags]} class="flex gap-2 text-xs/4 text-zinc-500">
+      <%= for tag <- @tags do %>
+        <span class="first:hidden">&bull;</span>
+        <span>{tag}</span>
       <% end %>
     </div>
   </div>
