--- a/lib/gits_web/live/host_live/edit_event_templates/location.html.heex
+++ b/lib/gits_web/live/host_live/edit_event_templates/location.html.heex
@@ -56,10 +56,9 @@
 
     <.form
       :let={f}
-      id="create-event-form"
       for={@form}
       class="grid gap-6"
-      phx-submit="details"
+      phx-submit="location"
       phx-change="validate"
       phx-auto-recover="validate"
     >
