--- a/lib/gits_web/live/host_live/onboarding.html.heex
+++ b/lib/gits_web/live/host_live/onboarding.html.heex
@@ -4,13 +4,13 @@
     A host account will make it easy to manage events, venues and everything else to make you a successful host
   </p>
   <.form :let={f} id="host-form" for={@form} phx-submit="save" phx-change="validate">
-    <div class="grid grid-cols-[auto_1fr] mt-8 items-center gap-1 gap-x-4">
+    <div class="mt-8 grid grid-cols-[auto_1fr] items-center gap-1 gap-x-4">
       <span class="col-span-full w-full text-sm font-medium">Upload your logo</span>
       <div class="size-24 overflow-hidden rounded-xl bg-zinc-200">
         <%= if Enum.any?(@uploads.logo.entries) do %>
           <.live_img_preview
             entry={@uploads.logo.entries |> List.first()}
-            class="h-full w-full object-cover"
+            class="h-full w-full object-cover opacity-50"
           />
         <% else %>
           <img src="/images/placeholder.png" alt="" class="h-full w-full object-cover" />
@@ -34,7 +34,7 @@
       </p>
     </div>
 
-    <.input field={f[:name]} label="Host name" class="mt-8 col-span-full" />
+    <.input field={f[:name]} label="Host name" class="col-span-full mt-8" />
 
     <.inputs_for :let={o} field={f[:owner]}>
       <.input field={o[:id]} type="hidden" value={@user.id} />
