--- a/lib/gits_web/live/host_live/edit_event_templates/media.html.heex
+++ b/lib/gits_web/live/host_live/edit_event_templates/media.html.heex
@@ -9,7 +9,7 @@
           class="h-full w-full object-cover opacity-50"
         />
       <% else %>
-        <img src="/images/placeholder.png" alt="" class="h-full w-full object-cover" />
+        <img src={@poster} alt="" class="h-full w-full object-cover" />
       <% end %>
     </div>
 
