--- a/lib/gits_web/live/host_live/edit_event_templates/tickets.html.heex
+++ b/lib/gits_web/live/host_live/edit_event_templates/tickets.html.heex
@@ -1,248 +1,58 @@
-<%= if @show_ticket_form do %>
-  <div class="flex items-center">
-    <div class="grow">
-      <h2 class="text-lg/7 font-semibold text-gray-900">
-        {if @form.action == :add_ticket_type, do: "Add ticket", else: "Edit ticket"}
-      </h2>
-      <p class="mb-4 mt-1 text-sm/5 text-gray-600"></p>
-    </div>
-    <.button
-      variant={:subtle}
-      class="shrink-0"
-      phx-click={
-        JS.patch(
-          Routes.host_edit_event_path(
-            @socket,
-            @live_action,
-            @host.handle,
-            @event.public_id
-          ),
-          replace: true
-        )
-      }
-    >
-      <span class="font-semibold">Cancel</span>
-    </.button>
+<div class="flex items-center">
+  <div class="grow">
+    <h2 class="text-lg/7 font-semibold text-gray-900">Tickets</h2>
+    <p class="mb-4 mt-1 text-sm/5 text-gray-600"></p>
   </div>
-  <.form
-    :let={f}
-    id="add_ticket_form"
-    for={@form}
-    class="grow"
-    phx-submit={
-      JS.push("tickets")
-      |> JS.exec("data-cancel", to: "#create_ticket")
-    }
-    phx-change="validate"
-  >
-    <div class="grid max-w-screen-sm grid-cols-2 gap-4">
-      <.inputs_for :let={tf} field={f[:type]}>
-        <.input
-          type="color"
-          class="col-span-full max-w-40"
-          field={tf[:color]}
-          value={tf[:color].value || Gits.RandomColor.generate()}
-          label="Color"
-        />
+  <.button class="shrink-0" phx-click={JS.patch(@on_add_ticket_path, replace: true)}>
+    <.icon name="i-lucide-plus" />
+    <span class="font-semibold">Add ticket</span>
+  </.button>
+</div>
 
-        <.input type="text" field={tf[:name]} label="Name" />
-
-        <.input type="number" field={tf[:price]} label="Price" />
-        <.input type="number" field={tf[:quantity]} label="Quantity" />
-        <.input type="number" field={tf[:limit_per_user]} label="Limit per user" />
-
-        <.input field={tf[:sale_starts_at]} label="Sale starts" type="datetime-local" />
-
-        <.input field={tf[:sale_ends_at]} label="Sale ends" type="datetime-local" />
-
-        <.input
-          type="textarea"
-          field={tf[:description]}
-          label="Description"
-          class="col-span-full"
-        />
-        <.input
-          type="checkbox"
-          field={tf[:check_in_enabled]}
-          label="Enable Check-in"
-          hint="RSVP"
-          description="Ticket holders will be required to sign in. This also allows admitting attendees without scanning their ticket"
-          class="col-span-full"
-        />
-      </.inputs_for>
-    </div>
-    <div class="col-span-full flex gap-6 py-4 pb-8">
-      <.button disabled={not @form.changed? or not @form.valid?}>
-        <span class="text-sm font-semibold capitalize">
-          Save
+<div class="mt-8 rounded-xl border">
+  <.table id="tickets" rows={@event.ticket_types}>
+    <:col :let={ticket} label="Ticket">
+      <div class="flex gap-3">
+        <span class="w-1.5 self-stretch rounded-full" style={"background-color: #{ticket.color}"}>
         </span>
-      </.button>
 
-      <.button variant={:ghost} type="reset" name="reset">
-        <span class="text-sm font-semibold">
-          Reset
-        </span>
-      </.button>
-      <div role="none" class="grow"></div>
-    </div>
-  </.form>
-<% else %>
-  <div class="flex items-center">
-    <div class="grow">
-      <h2 class="text-lg/7 font-semibold text-gray-900">Tickets</h2>
-      <p class="mb-4 mt-1 text-sm/5 text-gray-600"></p>
-    </div>
-    <.button
-      class="shrink-0"
-      phx-click={
-        JS.patch(
-          Routes.host_edit_event_path(
-            @socket,
-            @live_action,
-            @host.handle,
-            @event.public_id,
-            %{ticket: :create}
-          ),
-          replace: true
-        )
-      }
-    >
-      <.icon name="i-lucide-plus" />
-      <span class="font-semibold">Add ticket</span>
-    </.button>
-  </div>
-
-  <div class="mt-8 rounded-xl border">
-    <.table id="tickets" rows={@event.ticket_types}>
-      <:col :let={ticket} label="Ticket">
-        <div class="flex gap-3">
-          <span
-            class="w-1.5 self-stretch rounded-full"
-            style={"background-color: #{ticket.color}"}
-          >
-          </span>
-
-          {ticket.name}
-        </div>
-      </:col>
-      <:col :let={ticket} label="Quantity">{ticket.quantity}</:col>
-      <:col :let={ticket} label="Price">{ticket.price}</:col>
-      <:col :let={ticket} label="Limit p.p" optional>{ticket.limit_per_user}</:col>
-
-      <:action :let={ticket}>
-        <.button
-          variant={:ghost}
-          size={:none}
-          class="p-2"
-          phx-click={
-            JS.patch(
-              Routes.host_edit_event_path(
-                @socket,
-                @live_action,
-                @host.handle,
-                @event.public_id,
-                %{ticket: :edit, id: ticket.id}
-              ),
-              replace: true
-            )
-          }
-        >
-          <.icon name="i-lucide-pen-line" />
-        </.button>
-      </:action>
-
-      <:action :let={ticket}>
-        <.button
-          variant={:ghost}
-          size={:none}
-          class="p-2"
-          phx-click={
-            JS.patch(
-              Routes.host_edit_event_path(
-                @socket,
-                @live_action,
-                @host.handle,
-                @event.public_id,
-                %{modal: :ticket, archive: ticket.id}
-              ),
-              replace: true
-            )
-            |> show_modal("archive_ticket")
-          }
-        >
-          <.icon name="i-lucide-trash" />
-        </.button>
-      </:action>
-    </.table>
-  </div>
-
-  <div class="col-span-full flex gap-6 py-4 pb-8">
-    <div role="none" class="grow"></div>
-    <.button
-      :if={@form.type == :update}
-      type="button"
-      variant={:subtle}
-      phx-click={
-        JS.patch(
-          Routes.host_edit_event_path(
-            @socket,
-            :tickets,
-            @host.handle,
-            @event.public_id,
-            %{modal: :ticket, create: nil}
-          ),
-          replace: true
-        )
-        |> show_modal("create_ticket")
-      }
-    >
-      <span class="text-sm font-semibold">
-        Next
-      </span>
-      <.icon name="i-lucide-chevron-right" />
-    </.button>
-  </div>
-<% end %>
-
-<.modal
-  new={true}
-  id="archive_ticket"
-  show={@show_archive_ticket_modal}
-  on_cancel={
-    JS.patch(
-      Routes.host_edit_event_path(@socket, @live_action, @host.handle, @event.public_id),
-      replace: true
-    )
-    |> hide_modal("archive_ticket")
-  }
->
-  <div class="grid gap-4">
-    <h3 class="text-lg/4 font-semibold">Archive Ticket</h3>
-    <div class="text-sm text-zinc-500 space-y-2">
-      <p>
-        You are about to archive this ticket. Archiving will remove it from the event.
-      </p>
-      <p>Are you sure you want to archive this ticket?</p>
-    </div>
-    <.form
-      :let={f}
-      id="archive_ticket_form"
-      for={@form}
-      class="grid grow grid-cols-2 gap-6"
-      phx-submit={
-        JS.push("tickets")
-        |> JS.exec("data-cancel", to: "#archive_ticket")
-      }
-      phx-change="validate"
-    >
-      <.inputs_for :if={@show_archive_ticket_modal} field={f[:type]}></.inputs_for>
-      <div class="col-span-full flex justify-end">
-        <button class="flex h-9 items-center rounded-lg bg-zinc-950 px-4 text-zinc-50">
-          <span class="text-sm font-semibold">
-            Yes, Archive
-          </span>
-        </button>
+        {ticket.name}
       </div>
-    </.form>
-  </div>
-</.modal>
+    </:col>
+    <:col :let={ticket} label="Quantity">{ticket.quantity}</:col>
+    <:col :let={ticket} label="Price">{ticket.price}</:col>
+    <:col :let={ticket} label="Limit p.p" optional>{ticket.limit_per_user}</:col>
+
+    <:action :let={ticket}>
+      <.button
+        variant={:ghost}
+        size={:none}
+        class="p-2"
+        phx-click={
+          JS.patch(
+            Routes.host_edit_ticket_path(
+              @socket,
+              :edit_ticket,
+              @host.handle,
+              @event.public_id,
+              ticket.id
+            ),
+            replace: true
+          )
+        }
+      >
+        <.icon name="i-lucide-pen-line" />
+      </.button>
+    </:action>
+  </.table>
+</div>
+
+<div class="col-span-full flex gap-6 py-4 pb-8">
+  <div role="none" class="grow"></div>
+  <.button :if={@form.type == :update} type="button" variant={:subtle} onclick="history.back()">
+    <span class="text-sm font-semibold">
+      Done
+    </span>
+    <.icon name="i-lucide-circle-check" />
+  </.button>
+</div>
