--- a/lib/gits_web/live/host_live/view_event_templates/overview.html.heex
+++ b/lib/gits_web/live/host_live/view_event_templates/overview.html.heex
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <div :if={not @payments_ready} class="rounded-lg border border-border px-4 py-3">
+  <div :if={not @payouts_ready} class="rounded-lg border border-border px-4 py-3">
     <div class="flex gap-2">
       <div class="flex grow gap-3">
         <.icon name="i-lucide-triangle-alert" class=" text-orange-500 mt-1" />
