--- a/lib/gits_web/live/my_live/settings.html.heex
+++ b/lib/gits_web/live/my_live/settings.html.heex
@@ -12,16 +12,16 @@
         class="group flex items-center gap-2  border-b-2 border-transparent py-2 font-medium text-zinc-500 hover:text-zinc-950 aria-selected:border-zinc-950 aria-selected:text-zinc-950 lg:rounded-lg lg:border-none lg:p-2 lg:hover:bg-zinc-50"
       >
         <.icon name={icon} class="hidden lg:inline" />
-        <span class="font-medium capitalize"><%= name %></span>
+        <span class="font-medium capitalize">{name}</span>
       </.link>
     </div>
     <div :if={@live_action == :account} class="mx-auto w-full max-w-screen-sm space-y-8">
       <div class="size-28 rounded-full bg-zinc-200"></div>
       <div class="grid gap-1">
         <span class="text-3xl font-semibold">
-          <%= @current_user.name || "Unknown" %>
+          {@current_user.name || "Unknown"}
         </span>
-        <span class="text-sm text-zinc-500"><%= @current_user.email %></span>
+        <span class="text-sm text-zinc-500">{@current_user.email}</span>
       </div>
       <.form :let={f} for={%{}} class="space-y-4">
         <div class="flex items-center gap-4">
@@ -56,11 +56,11 @@
       <ul role="list" class="mt-3 grid grid-cols-1 gap-5 sm:grid-cols-2 sm:gap-6 lg:grid-cols-2">
         <li :for={host <- @hosts} class="col-span-1 flex rounded-md shadow-sm">
           <div class="flex w-16 shrink-0 items-center justify-center rounded-l-md bg-zinc-800 text-sm font-medium text-white">
-            <%= host.name
+            {host.name
             |> String.split()
             |> Enum.map(&String.first(&1))
             |> Enum.join()
-            |> String.upcase() %>
+            |> String.upcase()}
           </div>
           <div class="flex flex-1 items-center justify-between truncate rounded-r-md border-b border-r border-t border-gray-200 bg-white">
             <div class="flex-1 truncate px-4 py-2 text-sm">
@@ -68,7 +68,7 @@
                 href={Routes.host_dashboard_path(@socket, :overview, host.handle)}
                 class="font-medium text-gray-900 hover:text-gray-600"
               >
-                <%= host.name %>
+                {host.name}
               </a>
               <p class="text-gray-500">Owner</p>
             </div>
