feat: add verification process for hosts and admin actions
- implement `verify` action in `gits.accounts.host` to manage host
  verification state.
- add policies for `read` and `create` actions in `gits.support.admin`
  to ensure proper authorization.
- enhance `gitsweb.adminlive` to handle host verification events and
  update the ui accordingly.
- update `team.html.heex` to improve display of role information.
- modify `admin_live.html.heex` to include a verification button for
  hosts in pending state.

--- a/lib/gits_web/controllers/account_html/team.html.heex
+++ b/lib/gits_web/controllers/account_html/team.html.heex
@@ -18,8 +18,8 @@
           end
         }
       >
-        <:col :let={role} label="Name"><%= role.user.display_name %></:col>
-        <:col :let={role} label="Role"><%= role.type %></:col>
+        <:col :let={role} label="Name">{role.user.display_name}</:col>
+        <:col :let={role} label="Role">{role.type}</:col>
         <:action>
           <!-- <button> -->
           <!--   <.icon name="hero-ellipsis-vertical-mini" /> -->
