feat: add placeholder image url handling and visibility option
- introduce `get_image_url/1` function to return a placeholder
  image when `nil` is passed.
- update visibility options in the event details template to
  only include `:private`, enhancing clarity for users.

--- a/lib/gits_web/live/host_live/edit_event_templates/event_details.html.heex
+++ b/lib/gits_web/live/host_live/edit_event_templates/event_details.html.heex
@@ -21,7 +21,7 @@
     <.input
       type="radio"
       field={f[:visibility]}
-      options={[:private, :public]}
+      options={[:private]}
       label="Visibility"
       class="col-span-full"
     />
