--- a/lib/gits_web/live/host_live/edit_event_templates/location.html.heex
+++ b/lib/gits_web/live/host_live/edit_event_templates/location.html.heex
@@ -69,7 +69,7 @@
           field={f[:location_is_private]}
           label="Private location"
           type="checkbox"
-          description="Hide the location from the public event listing. The venue will only be sent to customers after checking in (Note: This requires that all attendees of the event sign in)"
+          description="Hide the location from the public event listing. Location details will only be sent to customers after checking in."
           class="col-span-full"
         />
       </div>
