--- a/lib/gits_web/live/host_live/settings.html.heex
+++ b/lib/gits_web/live/host_live/settings.html.heex
@@ -1,17 +1,12 @@
-<%= if @live_action == :index do %>
-  <div class="flex items-center gap-2 p-2">
-    <div class="flex w-full grow items-center gap-1 text-sm">
-      <div class="flex shrink-0 items-center truncate rounded-lg border border-transparent p-2 text-sm/6 font-semibold">
+<div class="flex items-center gap-2 p-2">
+  <div class="flex w-full grow items-center gap-1 text-sm">
+    <%= if @live_action == :index do %>
+      <div class="flex shrink-0 items-center truncate rounded-lg border border-transparent p-2 text-sm/5 font-semibold">
         <span class="truncate ">
           Settings
         </span>
       </div>
-    </div>
-  </div>
-<% end %>
-<%= if @live_action == :billing do %>
-  <div class="flex max-w-72 items-center gap-2 p-2 lg:max-w-full">
-    <div class="flex w-full grow items-center gap-1 text-sm">
+    <% else %>
       <.button
         phx-click={JS.patch(Routes.host_settings_path(@socket, :index, @host.handle))}
         variant={:ghost}
@@ -24,11 +19,11 @@
       </.button>
       <span class="text-xs font-semibold text-zinc-400">/</span>
       <div class="flex  shrink-0 items-center truncate rounded-lg px-1 text-sm/6 font-semibold">
-        <span class="">Billing & Payouts</span>
+        <span class="">{@section}</span>
       </div>
-    </div>
+    <% end %>
   </div>
-<% end %>
+</div>
 
 <%= if @live_action == :index do %>
   <div class="grid max-w-screen-md w-full gap-8 p-2">
@@ -105,39 +100,24 @@
       </div>
       <dl class="grid gap-4">
         <div class="grid gap-2 lg:grid-cols-[theme(space.40)_1fr]">
-          <dt class="text-sm/6 grow  text-zinc-500">Logo</dt>
-          <dd class="size-12 rounded-md bg-zinc-200"></dd>
-        </div>
-
-        <div class="grid gap-2 lg:grid-cols-[theme(space.40)_1fr]">
-          <dt class="text-sm/6 grow  text-zinc-500">Name</dt>
-          <dd>
+          <dt class="text-sm/6 grow  text-zinc-500">Payout Details</dt>
+          <dd :if={not is_nil(@host.paystack_subaccount_code)} class="grid">
             <span class="text-sm/6">
-              {@host.name}
+              {@host.paystack_business_name}
+            </span>
+
+            <span class="text-sm/6">
+              {@bank_name}
+            </span>
+
+            <span class="text-sm/6">
+              {@host.paystack_account_number}
             </span>
           </dd>
-        </div>
 
-        <div class="grid gap-2 lg:grid-cols-[theme(space.40)_1fr]">
-          <dt class="text-sm/6 grow  text-zinc-500">Status</dt>
-          <dd>
-            <span
-              :if={@host.state == :pending}
-              class="inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10"
-            >
-              Pending review
-            </span>
-            <span
-              :if={@host.state == :suspended}
-              class="inline-flex items-center rounded-md bg-yellow-50 px-2 py-1 text-xs font-medium text-yellow-800 ring-1 ring-inset ring-yellow-600/20"
-            >
-              Suspended
-            </span>
-            <span
-              :if={@host.state == :verified}
-              class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20"
-            >
-              Verified
+          <dd :if={is_nil(@host.paystack_subaccount_code)}>
+            <span class="text-sm/6">
+              "Not setup"
             </span>
           </dd>
         </div>
@@ -160,9 +140,7 @@
       phx-change="validate"
       phx-submit="submit"
     >
-      <.input field={f[:paystack_business_name]} label="Business name" type="text" />
-      <.input field={f[:paystack_settlement_bank]} options={@banks} label="Bank" type="select" />
-      <.input field={f[:paystack_account_number]} label="Account number" type="number" />
+      <.input field={f[:name]} label="Name" type="text" />
       <div class="flex col-span-full gap-6">
         <.button disabled={not @form.changed? or not @form.valid?}><span>Save</span></.button>
         <.button variant={:ghost} type="button" phx-click={JS.dispatch("gits:go_back")}>
