--- a/lib/gits_web/live/host_live/view_event.html.heex
+++ b/lib/gits_web/live/host_live/view_event.html.heex
@@ -1,28 +1,13 @@
-<div class="flex items-center gap-2 p-2 lg:px-0">
+<div class="flex items-center gap-2 p-2">
   <div class="flex w-full grow items-center gap-1 text-sm">
-    <div class="flex h-9 max-w-48 items-center gap-2 rounded-lg px-1 py-0.5 hover:bg-zinc-100">
-      <div class="flex size-8 shrink-0 items-center justify-center rounded-full bg-zinc-500">
-        <span class="font-medium text-white ">
-          {@host.name
-          |> String.split()
-          |> Enum.map(&String.first(&1))
-          |> Enum.join()
-          |> String.upcase()}
-        </span>
-      </div>
-      <span class="hidden truncate font-semibold lg:inline">{@host.name}</span>
-      <.icon name="i-lucide-chevrons-up-down" class="size-4 shrink-0 text-zinc-400" />
-    </div>
+    <.button onclick="history.back()" variant={:ghost} size={:none} class="group max-w-48 p-2">
+      <span class="truncate text-zinc-400 group-hover:text-zinc-600">
+        Events
+      </span>
+    </.button>
     <span class="text-xs font-semibold text-zinc-400">/</span>
-    <button
-      onclick="history.back()"
-      class="flex h-9 items-center truncate rounded-lg px-1 text-sm font-medium text-zinc-500 hover:bg-zinc-100 hover:text-zinc-950"
-    >
-      <span>Events</span>
-    </button>
-    <span class="text-xs font-semibold text-zinc-400">/</span>
-    <div class="flex h-9 items-center truncate rounded-lg px-1 text-sm font-medium">
-      <span class="truncate">{@event.name}</span>
+    <div class="flex  shrink-0 items-center truncate rounded-lg px-1 text-sm/6 font-semibold">
+      <span class="">{@section}</span>
     </div>
   </div>
 </div>
